# dingtalk-approval-sync

./: .gitignore  DEPLOYMENT.md  NEXT_STEPS.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  checkpoint.py  config.yaml.example  data_processor.py  dingtalk_client.py  dingtalk_to_feishu_plan.md  feishu_client.py  logger.py  pyproject.toml  requirements.txt  sync.py  test_config.py  开始使用.md
tests/: test_checkpoint.py  test_data_processor.py
